[package]
name = "tree-sitter-cql"
description = "cql grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "cql"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-cql"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20"
regex = "1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = { git = "https://github.com/shotover/criterion.rs", branch = "version-0.4", version = "0.3", features = ["async_tokio", "html_reports"] }


[[bench]]
name = "benches"
harness = false
